main/execline: upgrade to 2.9.7.0

--- a/main/execline/APKBUILD
+++ b/main/execline/APKBUILD
@@ -1,37 +1,36 @@
-# Contributor: John Regan <john@jrjrtech.com>
 # Maintainer: Laurent Bercot <ska-devel@skarnet.org>
 pkgname=execline
-pkgver=2.9.6.1
+pkgver=2.9.7.0
 pkgrel=0
 pkgdesc="A small scripting language, to be used in place of a shell in non-interactive scripts."
 url=https://skarnet.org/software/execline/
 arch="all"
 license="ISC"
 options="!check"
-_skalibs_version=2.14.3
+_skalibs_version=2.14.4
 makedepends="skalibs-dev>=$_skalibs_version"
 subpackages="$pkgname-static $pkgname-libs $pkgname-dev $pkgname-doc"
-source="https://skarnet.org/software/execline/execline-$pkgver.tar.gz execline.pc.in"
+source="https://skarnet.org/software/execline/execline-$pkgver.tar.gz"
 install="execline.post-install execline.post-upgrade execline.pre-deinstall"
+
 
 build() {
 	./configure \
 		--prefix=/usr \
 		--enable-shared \
 		--disable-allstatic \
+		--enable-pkgconfig \
+		--with-pkgconfig \
 		--enable-multicall
 	make
 }
 
 package() {
 	make DESTDIR="$pkgdir" install
-	sed -e "s/@@VERSION@@/$pkgver/g; s/@@SKALIBS_VERSION@@/${_skalibs_version}/g;" "$srcdir/$pkgname.pc.in" > "$srcdir/$pkgname.pc"
-	install -D -m 0644 "$srcdir/$pkgname.pc" "$pkgdir/usr/lib/pkgconfig/$pkgname.pc"
 	mkdir -p "$pkgdir/usr/share/doc"
 	cp -a "$builddir/doc" "$pkgdir/usr/share/doc/$pkgname"
 }
 
 sha512sums="
-86e20a63926cc03cb81e07c9cbea9da5d0384436a82b93e331da6b3ced33829baf5adae4286d2c053b21474d41602d53804ff0bc280da60f7bccc64cbe5f601e  execline-2.9.6.1.tar.gz
-54026153ee1b96357bdf4614c520a287b34db1ded012cb563240c1292daea33af6da6b39a051ad18dd5b53a1d42c25cc109185ce83c8cbc67fcb098a9418d78e  execline.pc.in
+c46aa4954a560610074a5a4f8cecc1512bab05b40739c4dddc74881edb30468f248fc08ca1a461ec66279fa43fa25d130b339790995fb1eeb1612a13dc479ac1  execline-2.9.7.0.tar.gz
 "
