main/openssh: align pkg-config use with utmps change (now libutmps)

--- a/main/openssh/APKBUILD
+++ b/main/openssh/APKBUILD
@@ -5,7 +5,7 @@
 pkgname=openssh
 pkgver=10.0_p1
 _myver=${pkgver%_*}${pkgver#*_}
-pkgrel=5
+pkgrel=6
 pkgdesc="Port of OpenBSD's free SSH release"
 url="https://www.openssh.com/portable.html"
 arch="all"
@@ -102,8 +102,8 @@ _do_configure() {
 
 	local _extra_cflags="" _extra_libs=""
 	if [ -z "$BOOTSTRAP" ] && [ -z "$APORTS_BOOTSTRAP" ]; then
-		_extra_cflags="$(pkg-config --cflags --static utmps)"
-		_extra_libs="-Wl,--push-state,-Bstatic $(pkg-config --libs --static utmps) -Wl,--pop-state"
+		_extra_cflags="$(pkg-config --cflags --static libutmps)"
+		_extra_libs="-Wl,--push-state,-Bstatic $(pkg-config --libs --static libutmps) -Wl,--pop-state"
 	fi
 
 	./configure \
