--- a/community/qcoro/APKBUILD
+++ b/community/qcoro/APKBUILD
@@ -5,7 +5,7 @@ pkgver=0.11.0
 pkgrel=1
 pkgdesc="C++ Coroutines for Qt"
 url="https://qcoro.dvratil.cz"
-arch="all"
+arch="all !armhf" # armhf: qt6-qtdeclarative
 license="MIT"
 depends_dev="
 	qt5-qtbase-dev
