--- a/community/qt6-qtquick3d/APKBUILD
+++ b/community/qt6-qtquick3d/APKBUILD
@@ -6,7 +6,7 @@ pkgver=6.8.2
 pkgrel=0
 pkgdesc="Qt module and API for defining 3D content in Qt Quick"
 url="https://qt.io/"
-arch="all"
+arch="all !armhf" # armhf: qt6-qtdeclarative
 license="LGPL-2.1-only AND LGPL-3.0-only AND GPL-3.0-only AND Qt-GPL-exception-1.0"
 depends_dev="
 	openxr-dev
