main/nfdump: disable on 32 bit arm. tests fails with bus error
ref: https://github.com/phaag/nfdump/issues/619

--- a/main/nfdump/APKBUILD
+++ b/main/nfdump/APKBUILD
@@ -6,7 +6,8 @@ pkgrel=0
 pkgdesc="Tools to collect and process netflow data"
 url="https://github.com/phaag/nfdump"
 # fails diff tests, probably broken on big endian
-arch="all !s390x"
+# arm*: tests ends with bus error: https://github.com/phaag/nfdump/issues/619
+arch="all !s390x !armhf !armv7"
 license="BSD-3-Clause"
 makedepends="autoconf automake bison bzip2-dev flex libtool rrdtool-dev"
 checkdepends="tzdata"
