--- a/community/libjxl/APKBUILD
+++ b/community/libjxl/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Alex Xu (Hello71) <alex_y_xu@yahoo.ca>
 pkgname=libjxl
 pkgver=0.10.3
-pkgrel=1
+pkgrel=2
 _testdata_commit=873045a9c42ed60721756e26e2a6b32e17415205
 pkgdesc="JPEG XL image format reference implementation"
 url="https://jpeg.org/jpegxl/"
@@ -47,7 +47,7 @@ prepare() {
 
 build() {
 	case "$CARCH" in
-	riscv64)
+	riscv64|ppc64le)
 		;;
 	*)
 		# fails on riscv
