community/libjxl: fix comment

--- a/community/libjxl/APKBUILD
+++ b/community/libjxl/APKBUILD
@@ -50,7 +50,7 @@ build() {
 	riscv64|ppc64le)
 		;;
 	*)
-		# fails on riscv
+		# fails on riscv/test fail on ppc64le
 		export CFLAGS="$CFLAGS -flto=thin"
 		export CXXFLAGS="$CXXFLAGS -flto=thin"
 		export CC=clang
