community/brlaser: upgrade to 6.2.7
The original upstream doesn't seem to be maintained anymore, there's
a new fork that has been getting updates/new device support for a few
months now that other distros (e.g. Debian) are packaging so let's
switch to that.

--- a/community/brlaser/APKBUILD
+++ b/community/brlaser/APKBUILD
@@ -1,15 +1,15 @@
 # Contributor: Isaac Dunham <ibid.ag@gmail.com>
 # Maintainer:
 pkgname=brlaser
-pkgver=6
-pkgrel=3
+pkgver=6.2.7
+pkgrel=0
 pkgdesc="Driver for Brother printers like the DCP 7030 and DCP 7065"
 url="https://github.com/pdewacht/brlaser"
 arch="all"
 license="GPL-2.0-or-later"
 depends="cups-filters"
 makedepends="cmake cups-dev samurai"
-source="brlaser-$pkgver.tar.gz::https://github.com/pdewacht/brlaser/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/Owl-Maintain/brlaser/archive/refs/tags/v$pkgver.tar.gz"
 
 build() {
 	cmake -B build -G Ninja \
@@ -27,5 +27,5 @@ package() {
 }
 
 sha512sums="
-d7e0e63b64be9ae7633381622c13ba0589e5fe58d277212bce4f5bb712a291ed0b0f2ac3d450dce61c7f9052c1ce7323fec66b5005c5cb3da1314b284d20f06f  brlaser-6.tar.gz
+f82364376df149710cf63eb49a13fa900c6bdd39543eed156c6b396fd4156e612b2de36a8c9e71e691c4c22de3cc83c0ac818477514be5a48edfaf9d5beee57c  brlaser-6.2.7.tar.gz
 "
