community/brlaser: change maintainership

--- a/community/brlaser/APKBUILD
+++ b/community/brlaser/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Isaac Dunham <ibid.ag@gmail.com>
-# Maintainer:
+# Maintainer: Clayton Craft <clayton@craftyguy.net>
 pkgname=brlaser
 pkgver=6.2.7
 pkgrel=0
