--- a/community/neovim/APKBUILD
+++ b/community/neovim/APKBUILD
@@ -3,7 +3,7 @@
 #
 # TODO: Try to trim the base package to include only common syntax files etc.
 pkgname=neovim
-pkgver=0.11.0
+pkgver=0.11.1
 pkgrel=0
 pkgdesc="Vim-fork focused on extensibility and agility"
 url="https://neovim.io/"
@@ -44,9 +44,9 @@ case "$CARCH" in
 esac
 subpackages="$pkgname-lang $pkgname-doc"
 source="https://github.com/neovim/neovim/archive/v$pkgver/neovim-$pkgver.tar.gz
-	fix-failure-with-long-path.patch
-	fix-overlap-on-listen-address.patch
 	make-tree-sitter-optional.patch
+	Revert-fix-desktop-cannot-open-filename-with-spaces-using-OS-file-manager.patch
+	test-swapfile.patch
 	nodoc.txt
 	"
 # secfixes:
@@ -92,12 +92,7 @@ check() {
 	export TEST_TIMEOUT=12000
 
 	msg "Running unit tests"
-	# cmake --build build --target unittest
-
-	# These tests fail due to terminal attribute difference. There have been
-	# some changes in this regard on the neovim master. If the tests continue
-	# to fail with neovim >= 0.11.0, then this should be reported upstream.
-	export TEST_FILTER_OUT='.*swapfile.*'
+	cmake --build build --target unittest
 
 	# The functional tests are known to fail on 32-bit arches.
 	# See: https://github.com/neovim/neovim/issues/32230
@@ -105,9 +100,25 @@ check() {
 	arm*|x86) return ;;
 	esac
 
+	export TEST_SKIP_FRAGILE=1
+	# fails on x86_64
+	export BUSTED_ARGS="--filter-out quitting.swapfile.dialog.on.startup"
+	# TODO: report upstream
+	BUSTED_ARGS="$BUSTED_ARGS --filter-out TUI.forwards"
+	BUSTED_ARGS="$BUSTED_ARGS --filter-out TUI.supports.undercurl"
+	# https://github.com/neovim/neovim/issues/31818
+	BUSTED_ARGS="$BUSTED_ARGS --filter-out diff.mode.overlapped.diff.blocks"
+	# https://github.com/neovim/neovim/issues/33910
+	BUSTED_ARGS="$BUSTED_ARGS --filter-out treesitter.foldexpr.doesn"
+	# https://github.com/neovim/neovim/issues/33911
+	BUSTED_ARGS="$BUSTED_ARGS --filter-out stdpath.*NVIM_APPNAME.relative.path"
+	# those appears to be flaky:
+	BUSTED_ARGS="$BUSTED_ARGS --filter-out put.command...register.special.tests.should.ring"
+	BUSTED_ARGS="$BUSTED_ARGS --filter-out get.string_chk"
+	BUSTED_ARGS="$BUSTED_ARGS --filter-out jobs.jobstop.*kills.entire.process.tree"
+	BUSTED_ARGS="$BUSTED_ARGS --filter-out buffer.cursor.position.is.correct.in.terminal.with.number"
 
-	# only test bad test
-	export TEST_FILE="test/functional/core/fileio_spec.lua"
+
 	msg "Running functional tests"
 	cmake --build build --target functionaltest
 }
@@ -139,9 +150,9 @@ doc() {
 }
 
 sha512sums="
-f898aebffa1d222cdbbc2663b69a6ea55a045c3ddb4e8454bda7b0c6e9abbfc60dce6ea235f535506f6caac9cc1b07c65bdab25374f320cfabc3744336989cf6  neovim-0.11.0.tar.gz
-8a5bf8b71eb36cf045a37b3636385ef53cd3aa55da43a2e1dacd78fa27d94e8ec9084da886a382cc8e2eab8ae42484777b13b4e26088b9113c8592ccb3ed4cab  fix-failure-with-long-path.patch
-07eaf37b87fcdad1a2397d1b8b6171c710526e1a4aede25b84414590a27f0798903d52d81ca324357a02cc5e0ebf20ed6de843fd736aa02271af30847309a0af  fix-overlap-on-listen-address.patch
+d2dac85379022e939a6a5ac8b64074d1e4a6d3605791b916e1d77366b97a28ee9f99107e4c251d5a28a5f515fa8bcde9cc6372a9d7901832de3ee01fb9895f4d  neovim-0.11.1.tar.gz
 660c83a863b8467a7f19febe4cae6f3ea08f985d5fda0c7466e00936c7b8113bf53077d4bd9a983744f131a68346da2f098425695f4c7c7fdd3244b26ee76927  make-tree-sitter-optional.patch
+c6a79a3ffc23a30d816ad0041a680be32c0d9ae78911df131d8ede906fcf6595296b770a09facba42c67e46b1ef5fbdd9320841a6f8e399a8eb22a7573ca7faf  Revert-fix-desktop-cannot-open-filename-with-spaces-using-OS-file-manager.patch
+a2b9ab5e5a91900ac60e2f59590e6d69888559da4431d3990860928fdbb4d053e54a3a94a9f065b36fb67c40c99fb890f162daae24e59797c09190cd1756da40  test-swapfile.patch
 72ab288f53acddc088c567aafe8c5afa6835325fab7879e782d1d62f87a662f3a6bac123c450debbae1b32336cc60b2830b429838ee3dfcc7524773b5069f4f0  nodoc.txt
 "
