testing/meep: upgrade to 1.30.0

--- a/testing/meep/APKBUILD
+++ b/testing/meep/APKBUILD
@@ -1,14 +1,23 @@
 # Contributor: Isaac Dunham <ibid.ag@gmail.com>
 # Maintainer:
 pkgname=meep
-pkgver=1.29.0
+pkgver=1.30.0
 pkgrel=0
 pkgdesc="FDTD finite-difference time-domain solver"
 url="https://meep.readthedocs.io/"
 arch="x86_64 ppc64le s390x"
 license="GPL-2.0-or-later"
-makedepends="harminv-dev>=1.4.1-r3 openblas-dev>=0.3.0 libctl-dev
-	guile-dev hdf5-dev gsl-dev gfortran gmp-dev fftw-dev"
+makedepends="
+	fftw-dev
+	gfortran
+	gmp-dev
+	gsl-dev
+	guile-dev
+	harminv-dev>=1.4.1-r3
+	hdf5-dev
+	libctl-dev
+	openblas-dev>=0.3.0
+	"
 # Omit -doc because it requires latex2html to build
 subpackages="$pkgname-dev"
 source="https://github.com/NanoComp/meep/releases/download/v$pkgver/meep-$pkgver.tar.gz"
@@ -37,5 +46,5 @@ package() {
 }
 
 sha512sums="
-97664a73a4c61ce6dd69c5b6fe1ae38faac2086a3b5f6a16baa0496b6a0d75fcd82fd1981af53723b48adb72af46b463bd56c717a36e06286de25e4e0719af05  meep-1.29.0.tar.gz
+109b05e634f4f77856f4ba03e1a6782bad9f2b498107d14953f2c1ccd2b5aa8817505d3e29735435dffc48e241d8ec1e2aa9a45d75ba84b6dec50d836c77eba3  meep-1.30.0.tar.gz
 "
