testing/meep: enable on all architectures

--- a/testing/meep/APKBUILD
+++ b/testing/meep/APKBUILD
@@ -5,7 +5,7 @@ pkgver=1.30.0
 pkgrel=0
 pkgdesc="FDTD finite-difference time-domain solver"
 url="https://meep.readthedocs.io/"
-arch="x86_64 ppc64le s390x"
+arch="all"
 license="GPL-2.0-or-later"
 makedepends="
 	fftw-dev
