community/cargo-tarpaulin: upgrade to 0.32.5

--- a/community/cargo-tarpaulin/APKBUILD
+++ b/community/cargo-tarpaulin/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: kpcyrd <git@rxv.cc>
 pkgname=cargo-tarpaulin
-pkgver=0.32.4
+pkgver=0.32.5
 pkgrel=0
 pkgdesc="Code coverage tool for Rust projects"
 url="https://github.com/xd009642/tarpaulin"
@@ -11,10 +11,7 @@ makedepends="
 	cargo-auditable
 	openssl-dev
 	"
-source="
-	https://github.com/xd009642/tarpaulin/archive/refs/tags/$pkgver/cargo-tarpaulin-$pkgver.tar.gz
-	fix-x86.patch
-	"
+source="https://github.com/xd009642/tarpaulin/archive/refs/tags/$pkgver/cargo-tarpaulin-$pkgver.tar.gz"
 builddir="$srcdir/tarpaulin-$pkgver"
 options="net !check" # tests broken
 
@@ -44,6 +41,5 @@ package() {
 }
 
 sha512sums="
-7616a5cc4ea90d9b0c2806d5fdd9322d0108262427ea33c89265645d6365e9f39370749c810114089359815fd0e4b74136ebfb257279536d05aac2a2df98a99a  cargo-tarpaulin-0.32.4.tar.gz
-85a837ad653fa61270ed5ae01ffd53ff70fff6fc008f93b1ab1e3630e89718fa3e8bc09be4ca844e2c6e2cd45e5859dcff109adbbc8b59c84fbd54b1f7371222  fix-x86.patch
+c0fa823d0eef701805dfe3ab8f6565c399a53eec954f33aad078418d0f1312b09e3a3421f71cb153b79416b6eebeef2d69313cfb82a547d3fc3e973edce92286  cargo-tarpaulin-0.32.5.tar.gz
 "
