--- a/community/celery/APKBUILD
+++ b/community/celery/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Antoine Martin (ayakael) <dev@ayakael.net>
 # Maintainer: Antoine Martin (ayakael) <dev@ayakael.net>
 pkgname=celery
-pkgver=5.4.0
-pkgrel=1
+pkgver=5.5.2
+pkgrel=0
 pkgdesc="An asynchronous task queue/job queue based on distributed message passing"
 url="http://www.celeryproject.org/"
 # loongarch64: blocked by py3-moto
@@ -26,12 +26,14 @@ makedepends="python3-dev py3-setuptools py3-gpep517 py3-wheel"
 checkdepends="
 	pre-commit
 	py3-pytest
+	py3-greenlet
 	py3-dnspython
 	py3-mongo
 	py3-pytest-celery
 	py3-pytest-subtests
 	py3-pytest-timeout
 	py3-pytest-click
+	py3-pydantic
 	py3-boto3
 	py3-moto
 	py3-pyaml
@@ -56,9 +58,25 @@ build() {
 check() {
 	python3 -m venv --clear --without-pip --system-site-packages .testenv
 	.testenv/bin/python3 -m installer "$builddir"/.dist/*.whl
+	# t/unit/backends/test_azureblockblob.py: requires py3-azure
 	# t/unit/backends/test_gcs.py: requires py3-google-cloud-storage
-	.testenv/bin/python3 -m pytest -v \
-		--ignore=t/unit/backends/test_gcs.py
+	# t/unit/worker/test_worker.py::test_WorkController::test_with_file_descriptor_safety: no file descriptors available
+	# t/unit/worker/test_worker.py::test_WorkController::test_with_autoscaler_file_descriptor_safety: no file descriptors available
+	case $CARCH in
+		ppc64le|riscv64)
+			.testenv/bin/python3 -m pytest -v \
+				--ignore=t/unit/backends/test_gcs.py \
+				--ignore=t/unit/backends/test_azureblockblob.py \
+				--deselect t/unit/worker/test_worker.py::test_WorkController::test_with_autoscaler_file_descriptor_safety \
+				--deselect t/unit/worker/test_worker.py::test_WorkController::test_with_file_descriptor_safety
+			;;
+		*)
+			.testenv/bin/python3 -m pytest -v \
+				--ignore=t/unit/backends/test_gcs.py \
+				--ignore=t/unit/backends/test_azureblockblob.py
+		;;
+esac
+
 }
 
 package() {
@@ -73,7 +91,7 @@ package() {
 }
 
 sha512sums="
-e59b62878f7da0af79be13df816e899c948f71f1063643baaabc1244dd44fd3114a5b3d724c010307ca8091c6b4343a4322213bc6154b843b79893b8f772476c  celery-5.4.0.tar.gz
+8630f4a935e3811550d79444a80997d4acd811a8c440c9a463520b9466031e2970c68a929dd05408545fc91cda1877928a0c6ec007e30baa87640545d095dafb  celery-5.5.2.tar.gz
 c283956f8fe386ef39cb3e165a20d1cc7ff6398fbf5a922bec6b61fe4a71188519baed9feafc4e0e5b6864851545edaba54b89ba3613b2cf2ddd6426a6bf8fc2  celery.confd
 a27cc3521cdf79ec60b15318c15679fe8f593c029c3ead53b162453ab9e86c05c57f7e4af843d69f17817a707db885f2c44d3b7f56337676dfc2ec0210bf38b7  celery.initd
 "
