community/cargo-tarpaulin: take over maintainership

--- a/community/cargo-tarpaulin/APKBUILD
+++ b/community/cargo-tarpaulin/APKBUILD
@@ -1,4 +1,4 @@
-# Maintainer: kpcyrd <git@rxv.cc>
+maintainer="Leon White <badfunkstripe@gmail.com>"
 pkgname=cargo-tarpaulin
 pkgver=0.32.5
 pkgrel=0
