main/util-linux: add retry with timeout for tests
they are still taking a long time to fail on the
x86_64 builders, try if this will be of any help

--- a/main/util-linux/APKBUILD
+++ b/main/util-linux/APKBUILD
@@ -161,7 +161,18 @@ build() {
 
 check() {
 	ulimit -n 4096
-	make check
+	local i; for i in $(seq 0 3); do
+		[ $i -eq 0 ] || msg "Retrying ($i/3)..."
+		if [ $i -lt 3 ]; then
+			timeout 10m make check && return 0
+		else
+			# If tests don't succeed after 3 retries, assume we
+			# don't have enough resources to run them parallelly
+			timeout 30m make -j1 check && return 0
+		fi
+		sleep 5
+	done
+	return 1
 }
 
 package() {
