--- a/main/mesa/APKBUILD
+++ b/main/mesa/APKBUILD
@@ -82,8 +82,12 @@ case "$CARCH" in
 x86*)
 	_gallium_drivers="$_gallium_drivers,svga,i915,iris,crocus"
 	;;
-armhf|armv7|aarch64)
+armhf|armv7)
 	_gallium_drivers="$_gallium_drivers,vc4,v3d,freedreno,lima,panfrost,etnaviv,tegra"
+	_gallium_drivers="${_gallium_drivers//r300,}"
+	;;
+aarch64)
+	_gallium_drivers="$_gallium_drivers,vc4,v3d,freedreno,lima,panfrost,etnaviv,tegra,asahi"
 	_gallium_drivers="${_gallium_drivers//r300,}"
 	;;
 riscv64|loongarch64)
