community/celery: deselect tests failing on package builders

--- a/community/celery/APKBUILD
+++ b/community/celery/APKBUILD
@@ -68,12 +68,15 @@ check() {
 				--ignore=t/unit/backends/test_gcs.py \
 				--ignore=t/unit/backends/test_azureblockblob.py \
 				--deselect t/unit/worker/test_worker.py::test_WorkController::test_with_autoscaler_file_descriptor_safety \
-				--deselect t/unit/worker/test_worker.py::test_WorkController::test_with_file_descriptor_safety
+				--deselect t/unit/worker/test_worker.py::test_WorkController::test_with_file_descriptor_safety \
+				--deselect t/unit/concurrency/test_prefork.py::test_AsynPool::test_register_with_event_loop__no_on_tick_dupes
 			;;
 		*)
 			.testenv/bin/python3 -m pytest -v \
 				--ignore=t/unit/backends/test_gcs.py \
-				--ignore=t/unit/backends/test_azureblockblob.py
+				--ignore=t/unit/backends/test_azureblockblob.py \
+				--deselect t/unit/concurrency/test_prefork.py::test_AsynPool::test_register_with_event_loop__no_on_tick_dupes \
+				--deselect t/unit/concurrency/test_prefork.py::test_AsynPool::test_schedule_writes_hub_remove_fd_only_from_writers_when_write_job_is_done
 		;;
 esac
 
