community/mimalloc2: disable check on x86 due to segfault
x86 (32-bit) is a dead architecture anyway, so let's not block the upgrade
because of it.

Reported to upstream: https://github.com/microsoft/mimalloc/issues/1086

--- a/community/mimalloc2/APKBUILD
+++ b/community/mimalloc2/APKBUILD
@@ -24,6 +24,12 @@ source="https://github.com/microsoft/mimalloc/archive/v$_pkgver/$_projname-$_pkg
 	"
 builddir="$srcdir/$_projname-$_pkgver"
 
+case "$CARCH" in
+	# test-stress segfaults
+	# see https://github.com/microsoft/mimalloc/issues/1086
+	x86) options="!check";;
+esac
+
 _buildtypes='debug insecure secure'
 
 build() {
