--- a/testing/mimalloc1/APKBUILD
+++ b/testing/mimalloc1/APKBUILD
@@ -24,6 +24,12 @@ source="https://github.com/microsoft/mimalloc/archive/v$pkgver/$_projname-$pkgve
 	"
 builddir="$srcdir/$_projname-$pkgver"
 
+case "$CARCH" in
+	# test-stress segfaults
+	# see https://github.com/microsoft/mimalloc/issues/1086
+	x86) options="!check";;
+esac
+
 _buildtypes='debug insecure secure'
 
 build() {
