community/qcoro: drop Qt5 build

--- a/community/qcoro/APKBUILD
+++ b/community/qcoro/APKBUILD
@@ -1,7 +1,7 @@
 maintainer="Bart Ribbers <bribbers@disroot.org>"
 pkgname=qcoro
 pkgver=0.12.0
-pkgrel=1
+pkgrel=2
 pkgdesc="C++ Coroutines for Qt"
 url="https://qcoro.dvratil.cz"
 # armhf blocked by qt6-qtdeclarative
@@ -23,48 +23,26 @@ checkdepends="
 	dbus-x11
 	xwayland-run
 	"
-subpackages="$pkgname-dev $pkgname-qt6"
+subpackages="$pkgname-dev"
 source="https://github.com/danvratil/qcoro/archive/v$pkgver/qcoro-v$pkgver.tar.gz"
 
 build() {
-	cmake -B build-qt5 -G Ninja \
-		-DCMAKE_BUILD_TYPE=None \
-		-DCMAKE_INSTALL_PREFIX=/usr \
-		-DCMAKE_INSTALL_LIBDIR=lib \
-		-DBUILD_SHARED_LIBS=TRUE \
-		-DUSE_QT_VERSION=5 \
-		-DQCORO_BUILD_EXAMPLES=OFF
-	cmake --build build-qt5
-
-	cmake -B build-qt6 -G Ninja \
+	cmake -B build -G Ninja \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=TRUE \
 		-DUSE_QT_VERSION=6 \
 		-DQCORO_BUILD_EXAMPLES=OFF
-	cmake --build build-qt6
+	cmake --build build
 }
 
 check() {
-	cd build-qt5
-	wlheadless-run -- ctest
-
-	cd "$builddir"/build-qt6
-
-	# test-qcorolocalsocket fails
-	wlheadless-run -- ctest -E "test-qcorolocalsocket"
+	wlheadless-run -- ctest --test-dir build -E "test-qcorolocalsocket"
 }
 
 package() {
-	DESTDIR="$pkgdir" cmake --install build-qt5
-	DESTDIR="$pkgdir" cmake --install build-qt6
-}
-
-qt6() {
-	cd "$builddir"
-
-	amove usr/lib/libQCoro6*
+	DESTDIR="$pkgdir" cmake --install build
 }
 
 sha512sums="
