testing/signal-desktop: fix expire time

--- a/testing/signal-desktop/APKBUILD
+++ b/testing/signal-desktop/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Antoine Martin (ayakael) <dev@ayakael.net>
 pkgname=signal-desktop
 pkgver=7.53.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A messaging app for simple private communication with friends"
 url="https://github.com/signalapp/Signal-Desktop/"
 # same as electron
@@ -199,9 +199,6 @@ prepare() {
 
 	# puts node modules in the root node_modules instead of under .pnpm
 	echo "node-linker=hoisted" >> .npmrc
-
-	# drops get-expire-time to not generate expiration date
-	sed -i 's| get-expire-time | |' package.json
 
 	msg "Installing signal-desktop JS dependencies"
 	pnpm install --ignore-scripts
@@ -431,9 +428,11 @@ build() {
 	pnpm rebuild esbuild
 
 	# build front
+	# resets GIT_CEILING_DIRECTORIES as sometimes abuild sets this and breaks get-expire-time
 	NODE_ENV=production \
 	SIGNAL_ENV=production \
 	NODE_OPTIONS=--openssl-legacy-provider \
+	GIT_CEILING_DIRECTORIES= \
 	pnpm run build:dev
 
 	# purge non-production deps
