--- a/main/abuild/APKBUILD
+++ b/main/abuild/APKBUILD
@@ -35,6 +35,7 @@ options="suid"
 pkggroups="abuild"
 source="https://gitlab.alpinelinux.org/alpine/abuild/-/archive/$pkgver/abuild-$pkgver.tar.gz
 	meson-test-rebuild.patch
+	cargo-target.patch
 	"
 builddir="$srcdir"/abuild-$pkgver
 
@@ -121,4 +122,5 @@ _sudo() {
 sha512sums="
 4e6d167d68f346a93222364962d425c20a54c81f986ca68b9118884a769de0c22ff0c3256b3d97c471dd7c6276c3a927bb92c95be218ab4dd1a0aac337a34a94  abuild-3.15.0_rc3.tar.gz
 e6c48c803c54bacf24bb4646e59b90eb4983316f4bc74528280273fdc4ee05ce23e7d83690c90c9f2c06db6f994e8bf2ad22b29a791757ea0cc20afdfb581fda  meson-test-rebuild.patch
+fbb44d871d57f31f1e94f0b7a1daed8bd86e2312c6c7a68dd599e71836b7fbc6e1159e865ce464c58f7fa2292adba3ab73ad90bd5b1a274f0ba8886108842f8a  cargo-target.patch
 "
