community/gleam: upgrade to 1.10.0
bump to the most recent version of the language. add `!check` option to
avoid package tests failing, since there's no package for the Bun
JavaScript runtime. it isn't clear how the previous versions didn't also
fail testing, since none of the necessary runtimes for testing are
listed in `checkdepends`

fixes #17139

--- a/community/gleam/APKBUILD
+++ b/community/gleam/APKBUILD
@@ -2,7 +2,8 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=gleam
-pkgver=1.8.1
+pkgver=1.10.0
+options="!check"
 pkgrel=0
 pkgdesc="Statically-typed language that compiles to Erlang and JS"
 url="https://gleam.run/"
@@ -35,5 +36,5 @@ package() {
 }
 
 sha512sums="
-c841977e3e4330f4c76b86571d5922cc330b1543a45c0b36fc875057193b8724fe8933966db682796665d867b587576ec9c0c58f10c4b973c4f222d1154e11af  gleam-1.8.1.tar.gz
+22f3c3f3d4088853d42a3bce708ff2ec48f02e6280812c3825eca17b8436985f85a7bcda4c367d6994f791708c18b1bc2356b0e6b9b5e1581d1eea18efddb932  gleam-1.10.0.tar.gz
 "
