community/webkit2gtk-6.0: fix crashing, use lld everywhere

--- a/community/webkit2gtk-6.0/APKBUILD
+++ b/community/webkit2gtk-6.0/APKBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Patrycja Rosa <alpine@ptrcnull.me>
 pkgname=webkit2gtk-6.0
 pkgver=2.48.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Portable web rendering engine WebKit for GTK+ - GTK4 version"
 url="https://webkitgtk.org/"
 arch="all"
@@ -43,6 +43,7 @@ makedepends="
 	libxml2-dev
 	libxslt-dev
 	libxt-dev
+	lld
 	llvm
 	mesa-dev
 	openjpeg-dev
@@ -72,7 +73,7 @@ builddir="$srcdir/webkitgtk-$pkgver"
 case "$CARCH" in
 s390x) ;;
 *)
-	makedepends="$makedepends lld libjxl-dev"
+	makedepends="$makedepends libjxl-dev"
 	;;
 esac
 
@@ -87,36 +88,8 @@ esac
 
 build() {
 	case "$CARCH" in
-	s390x|armhf|armv7|x86|ppc64le|loongarch64)
-		# llint/LowLevelInterpreter.cpp fails to build with fortify source here
-		export CXXFLAGS="$CXXFLAGS -U_FORTIFY_SOURCE"
-		;;
-	esac
-
-	case "$CARCH" in
-	armv7)
-		# clang fails to build armv7 due to some NEON related thing.
-		# https://github.com/WebKit/WebKit/pull/1233 should fix it
-		;;
-	s390x|riscv64)
-		# no lld on s390x, broken on riscv64
-		export CC=clang
-		export CXX=clang++
-		;;
-	*)
-		# the debug symbols become 1/2 the size, and actual webkit becomes
-		# smaller too.
-		export CC=clang
-		export CXX=clang++
-		export LDFLAGS="$LDFLAGS -fuse-ld=lld"
-		;;
-	esac
-
-	case "$CARCH" in
 	arm*|aarch64|s390x|riscv64|x86)
-		# arm: seemingly broken?
-		# s390x/riscv64: no lld
-		# x86: out of memory
+		# lto broken on these arches
 		;;
 	*)
 		local lto="-DLTO_MODE=thin"
@@ -128,7 +101,6 @@ build() {
 		# no libjxl
 		local jxl="-DUSE_JPEGXL=OFF"
 		;;
-	*) ;;
 	esac
 
 	case "$CARCH" in
@@ -140,8 +112,22 @@ build() {
 			-DENABLE_WEBASSEMBLY=OFF
 		"
 		;;
-	*) ;;
 	esac
+
+	case "$CARCH" in
+	armv7)
+		# https://github.com/llvm/llvm-project/issues/132322
+		# https://bugs.webkit.org/show_bug.cgi?id=290167
+		;;
+	*)
+		# the debug symbols become 1/2 the size, and actual webkit becomes
+		# smaller too.
+		export CC=clang
+		export CXX=clang++
+		;;
+	esac
+
+	export LDFLAGS="$LDFLAGS -fuse-ld=lld"
 
 	export AR=llvm-ar
 	export NM=llvm-nm
@@ -150,6 +136,10 @@ build() {
 	# significantly reduce debug symbol size
 	export CFLAGS="$CFLAGS -g1"
 	export CXXFLAGS="$CXXFLAGS -g1"
+
+	# broken with fortify
+	export CFLAGS="$CFLAGS -U_FORTIFY_SOURCE"
+	export CXXFLAGS="$CXXFLAGS -U_FORTIFY_SOURCE"
 
 	cmake -B build -G Ninja \
 		-DPORT=GTK \
