testing/youtube-tui: take over maintainership

--- a/testing/youtube-tui/APKBUILD
+++ b/testing/youtube-tui/APKBUILD
@@ -1,4 +1,5 @@
-# Maintainer: Cowington Post <cowingtonpost@gmail.com>
+# Contributor: Cowington Post <cowingtonpost@gmail.com>
+maintainer="Matthias Ahouansou <matthias@ahouansou.cz>"
 pkgname=youtube-tui
 pkgver=0.8.1
 pkgrel=0
