--- a/testing/youtube-tui/APKBUILD
+++ b/testing/youtube-tui/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Cowington Post <cowingtonpost@gmail.com>
 maintainer="Matthias Ahouansou <matthias@ahouansou.cz>"
 pkgname=youtube-tui
-pkgver=0.8.1
+pkgver=0.8.3
 pkgrel=0
 pkgdesc="Aesthetically pleasing YouTube TUI written in Rust"
 url="https://siriusmart.github.io/youtube-tui/"
@@ -9,6 +9,7 @@ arch="all"
 license="GPL-3.0-or-later"
 makedepends="cargo cargo-auditable mpv-dev libsixel-dev"
 source="https://github.com/Siriusmart/youtube-tui/archive/v$pkgver/youtube-tui-$pkgver.tar.gz"
+options="!check" # no tests
 
 prepare() {
 	default_prepare
@@ -25,5 +26,5 @@ package() {
 }
 
 sha512sums="
-e93b96ab863145f32d691adf3846b895466c24c451b62866f3ccabc813da022e2aaae1dd413f4c58d6cb31566c0c0e84561f0a17474b5d4a06a6e36f980a2724  youtube-tui-0.8.1.tar.gz
+587dbaf4ec9e5530bc3c8798c0f7156a4b3043936bb2aaac44a413dd4a9365bd991848226c5018a33339e2553d4c8d7f1f4d6c28393a81cbd9b65ce9f21d45dd  youtube-tui-0.8.3.tar.gz
 "
