community/webkit2gtk-4.1: fix crashing, use lld everywhere

--- a/community/webkit2gtk-4.1/APKBUILD
+++ b/community/webkit2gtk-4.1/APKBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Patrycja Rosa <alpine@ptrcnull.me>
 pkgname=webkit2gtk-4.1
 pkgver=2.48.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Portable web rendering engine WebKit for GTK+ - GTK+3 libsoup3 version"
 url="https://webkitgtk.org/"
 arch="all"
@@ -42,6 +42,7 @@ makedepends="
 	libxml2-dev
 	libxslt-dev
 	libxt-dev
+	lld
 	llvm
 	mesa-dev
 	openjpeg-dev
@@ -64,50 +65,22 @@ source="https://webkitgtk.org/releases/webkitgtk-$pkgver.tar.xz
 	riscv64-no-wasm.patch
 	loongarch64-fix-simde.patch
 	skia-add-target_sources-for-loongarch64.patch
-	typo.patch
 	x11-include-order.patch
+	typo.patch
 	"
 builddir="$srcdir/webkitgtk-$pkgver"
 
 case "$CARCH" in
 s390x) ;;
 *)
-	makedepends="$makedepends lld libjxl-dev"
+	makedepends="$makedepends libjxl-dev"
 	;;
 esac
 
 build() {
 	case "$CARCH" in
-	s390x|armhf|armv7|x86|ppc64le|loongarch64)
-		# llint/LowLevelInterpreter.cpp fails to build with fortify source here
-		export CXXFLAGS="$CXXFLAGS -U_FORTIFY_SOURCE"
-		;;
-	esac
-
-	case "$CARCH" in
-	armv7)
-		# clang fails to build armv7 due to some NEON related thing.
-		# https://github.com/WebKit/WebKit/pull/1233 should fix it
-		;;
-	s390x|riscv64)
-		# no lld on s390x, broken on riscv64
-		export CC=clang
-		export CXX=clang++
-		;;
-	*)
-		# the debug symbols become 1/2 the size, and actual webkit becomes
-		# smaller too.
-		export CC=clang
-		export CXX=clang++
-		export LDFLAGS="$LDFLAGS -fuse-ld=lld"
-		;;
-	esac
-
-	case "$CARCH" in
 	arm*|aarch64|s390x|riscv64|x86)
-		# arm: seemingly broken?
-		# s390x/riscv64: no lld
-		# x86: out of memory
+		# lto broken on these arches
 		;;
 	*)
 		local lto="-DLTO_MODE=thin"
@@ -119,7 +92,6 @@ build() {
 		# no libjxl
 		local jxl="-DUSE_JPEGXL=OFF"
 		;;
-	*) ;;
 	esac
 
 	case "$CARCH" in
@@ -131,8 +103,22 @@ build() {
 			-DENABLE_WEBASSEMBLY=OFF
 		"
 		;;
-	*) ;;
 	esac
+
+	case "$CARCH" in
+	armv7)
+		# https://github.com/llvm/llvm-project/issues/132322
+		# https://bugs.webkit.org/show_bug.cgi?id=290167
+		;;
+	*)
+		# the debug symbols become 1/2 the size, and actual webkit becomes
+		# smaller too.
+		export CC=clang
+		export CXX=clang++
+		;;
+	esac
+
+	export LDFLAGS="$LDFLAGS -fuse-ld=lld"
 
 	export AR=llvm-ar
 	export NM=llvm-nm
@@ -141,6 +127,10 @@ build() {
 	# significantly reduce debug symbol size
 	export CFLAGS="$CFLAGS -g1"
 	export CXXFLAGS="$CXXFLAGS -g1"
+
+	# broken with fortify
+	export CFLAGS="$CFLAGS -U_FORTIFY_SOURCE"
+	export CXXFLAGS="$CXXFLAGS -U_FORTIFY_SOURCE"
 
 	cmake -B build -G Ninja \
 		-DPORT=GTK \
@@ -177,6 +167,6 @@ b78a2ae7e51942c4606e6f2f574e86f107e0c44fc685d9eda41d309457a340b9d9b6fae39cdbc3cc
 61461d19f80108357d0469a855212308a49fb43f5a629d119f95492c3897444664cbe12beddc53d801878124a67e38b4a404d37d1ac9c0e5ce65d7586328b1d9  riscv64-no-wasm.patch
 5d5e1918baea689bc1b111779988d60aac448346bf4ab3a8430955f7771e7661269a5006b915ca2a82997680cb5c1838e8abb8d56ba3003e0b79eb8dd6736bf7  loongarch64-fix-simde.patch
 205174b83f82359d2a3e8b73e2d3da835913b4ff9a7777aae778244e3e18772c9d541d628df2577f6d6ede5f3fb89ed7727ada0eb76b100304e5ca5f00826859  skia-add-target_sources-for-loongarch64.patch
-d50230ec5a4c86c76c66fd588aa0ba19f88f06f24113e8442df3089c3b8b588dd295afe2bde0b43a01c9b9b83a64862e6c54441435dfe18f3790ee79e5c982d4  typo.patch
 0491cf01c9fcb4cc874374ab5a41592dd737285c3ca0d821c0de38b82be66e785a977ffc1dd547e48592961dde940c8e0133e927c8d5307b41b29984eb413b52  x11-include-order.patch
+d50230ec5a4c86c76c66fd588aa0ba19f88f06f24113e8442df3089c3b8b588dd295afe2bde0b43a01c9b9b83a64862e6c54441435dfe18f3790ee79e5c982d4  typo.patch
 "
