community/py3-anytree: fix version data

--- a/community/py3-anytree/APKBUILD
+++ b/community/py3-anytree/APKBUILD
@@ -9,13 +9,14 @@ url="https://github.com/c0fec0de/anytree"
 arch="noarch"
 license="Apache-2.0"
 depends="py3-six"
-makedepends="py3-gpep517 poetry py3-pdm-backend"
+makedepends="py3-gpep517 py3-pdm-backend"
 checkdepends="py3-pytest py3-pytest-cov py3-yaml graphviz"
 subpackages="$pkgname-pyc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/c0fec0de/anytree/archive/$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
 
 build() {
+	export PDM_BUILD_SCM_VERSION="$pkgver"
 	gpep517 build-wheel \
 		--wheel-dir .dist \
 		--output-fd 3 3>&1 >&2
