community/ostree: Drop listing linked libraries from ostree-mkinitfs
Since mkinitfs has already included the linked libraries for each files
in the listed features [1], ostree-mkinitfs can only prepare the entry
application "/usr/lib/ostree/ostree-prepare-root". So, drop linked
libraries of ostree-prepare-root from ostree-mkinitfs. And, mark
ostree-mkinitfs as noarch.

[1]: https://gitlab.alpinelinux.org/alpine/mkinitfs/-/blob/3.11.1/mkinitfs.in?ref_type=tags#L48-52

--- a/community/ostree/APKBUILD
+++ b/community/ostree/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: André Klitzing <aklitzing@gmail.com>
 pkgname=ostree
 pkgver=2025.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Operating system and container binary deployment and upgrades"
 url="https://github.com/ostreedev/ostree"
 arch="all"
@@ -33,7 +33,7 @@ subpackages="
 	$pkgname-gir
 	$pkgname-grub:grub:noarch
 	$pkgname-bash-completion:bashcomp:noarch
-	$pkgname-mkinitfs
+	$pkgname-mkinitfs::noarch
 	"
 source="https://github.com/ostreedev/ostree/releases/download/v$pkgver/libostree-$pkgver.tar.xz
 	prctl.patch
@@ -119,11 +119,6 @@ mkinitfs() {
 	mkdir -p "$subpkgdir"/etc/mkinitfs/features.d
 	echo "/usr/lib/ostree/ostree-prepare-root" \
 		> "$subpkgdir"/etc/mkinitfs/features.d/ostree.files
-	# Get the linked libraries, but skip first line which is the
-	# ostree-prepare-root including build environment folder path
-	lddtree -l "$subpkgdir"/../ostree/usr/lib/ostree/ostree-prepare-root \
-		| tail -n +2 \
-		>> "$subpkgdir"/etc/mkinitfs/features.d/ostree.files
 }
 
 sha512sums="
