--- a/community/gleam/APKBUILD
+++ b/community/gleam/APKBUILD
@@ -3,7 +3,6 @@
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=gleam
 pkgver=1.10.0
-options="!check"
 pkgrel=0
 pkgdesc="Statically-typed language that compiles to Erlang and JS"
 url="https://gleam.run/"
@@ -14,8 +13,16 @@ makedepends="
 	cargo
 	cargo-auditable
 	"
-checkdepends="git"
-source="$pkgname-$pkgver.tar.gz::https://github.com/gleam-lang/gleam/archive/refs/tags/v$pkgver.tar.gz"
+checkdepends="
+	deno
+	elixir
+	git
+	nodejs
+	rebar3
+	"
+source="$pkgname-$pkgver.tar.gz::https://github.com/gleam-lang/gleam/archive/refs/tags/v$pkgver.tar.gz
+	skip-bun-case.patch
+	"
 
 prepare() {
 	default_prepare
@@ -37,4 +44,5 @@ package() {
 
 sha512sums="
 22f3c3f3d4088853d42a3bce708ff2ec48f02e6280812c3825eca17b8436985f85a7bcda4c367d6994f791708c18b1bc2356b0e6b9b5e1581d1eea18efddb932  gleam-1.10.0.tar.gz
+4f4e0be74ebdc9b31910c8f80d364b0365f2268f62e0d0af5afd36a54d2c1bbb2aaf6bb6c0ecf743e3a4cf3ce80ec792e399912e0bc0d01aa2ea40ec82f5cf27  skip-bun-case.patch
 "
