main/nsd: add back ctarget
this one is required

--- a/main/nsd/APKBUILD
+++ b/main/nsd/APKBUILD
@@ -29,6 +29,7 @@ build() {
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
+		--target=$CTARGET \
 		--sbindir=/usr/sbin \
 		--mandir=/usr/share/man \
 		--with-user=nsd \
