testing/vscodium: fix pkgname

--- a/testing/vscodium/APKBUILD
+++ b/testing/vscodium/APKBUILD
@@ -1,5 +1,6 @@
 # Contributor: Díaz Urbaneja Diego <sodomon2@gmail.com>
 # Maintainer: Díaz Urbaneja Diego <sodomon2@gmail.com>
+pkgname=vscodium
 pkgver=1.99.32704
 pkgrel=2
 pkgdesc="VSCode without Microsoft branding/telemetry"
