--- a/community/gleam/APKBUILD
+++ b/community/gleam/APKBUILD
@@ -14,7 +14,6 @@ makedepends="
 	cargo-auditable
 	"
 checkdepends="
-	deno
 	elixir
 	git
 	nodejs
@@ -22,6 +21,7 @@ checkdepends="
 	"
 source="$pkgname-$pkgver.tar.gz::https://github.com/gleam-lang/gleam/archive/refs/tags/v$pkgver.tar.gz
 	skip-bun-case.patch
+	skip-deno-case.patch
 	"
 
 prepare() {
@@ -45,4 +45,5 @@ package() {
 sha512sums="
 22f3c3f3d4088853d42a3bce708ff2ec48f02e6280812c3825eca17b8436985f85a7bcda4c367d6994f791708c18b1bc2356b0e6b9b5e1581d1eea18efddb932  gleam-1.10.0.tar.gz
 4f4e0be74ebdc9b31910c8f80d364b0365f2268f62e0d0af5afd36a54d2c1bbb2aaf6bb6c0ecf743e3a4cf3ce80ec792e399912e0bc0d01aa2ea40ec82f5cf27  skip-bun-case.patch
+03a1bc735da92ca9142e9c7e51ba3d3d220588d2d74f4c2635d2b3d0fa48ef687403ba123feab2b796362a01d479900617e58c59f606d039a190f4c819254b9b  skip-deno-case.patch
 "
