community/ceph18: upgrade to 18.2.7
* add python patches from gentoo

--- a/community/ceph18/APKBUILD
+++ b/community/ceph18/APKBUILD
@@ -3,7 +3,7 @@
 # Contributor: Duncan Bellamy <dunk@denkimushi.com>
 # Maintainer: Duncan Bellamy <dunk@denkimushi.com>
 _pkgname=ceph
-pkgver=18.2.6
+pkgver=18.2.7
 pkgrel=0
 _majorver=${pkgver%%.*}
 pkgname=$_pkgname$_majorver
@@ -155,6 +155,9 @@ source="https://download.ceph.com/tarballs/ceph-$pkgver.tar.gz
 	gcc13.patch
 	gcc14-2.patch
 	py3-importlib-metadata-5.0.0.patch
+	ceph-19.2.2-py313-1.patch
+	ceph-19.2.2-py313-2.patch
+	ceph-19.2.2-py313-3.patch
 	"
 # to prevent things from installing wrong ceph libs, since they have the same SOMAJOR
 sonameprefix="ceph$_majorver:so:"
@@ -721,7 +724,7 @@ _default_replace_majorversion() {
 }
 
 sha512sums="
-06bef880543a3c444783ed4a3927fd94a7b05180d35d356372f36679f1e00c3ee2cf3b0c15732fdc0c1ba55c922e07b7fa66274cb12a196914c79faa99859f13  ceph-18.2.6.tar.gz
+78831fe6afaf3a242c7fa1be496ce6a74136a6a493b24622a1595d5d2ccc156e22384565b1e9ad3af73df31682c4d99439fab39371b26a17216cfe7d84023ef8  ceph-18.2.7.tar.gz
 110bdbcb40216c7ed155a8d23020784741b4992d895f4f04a146d275506e4e68053854d3b063b41e9c9b3e3e4f95b6b90602f92c185c853c0d8f47ad0c6b7121  ceph.confd
 ce5f162501f6b67fe254546dddf880d1a5b1d1a0fa69e0b1918de17e8da45c5c6124512b8cbd98b76f29d931403de0d11c5ffd330ed8ee1f4dc75bb04baecae3  ceph.initd
 51eadf5cc5e48922a28574f1b0f497b4fa68f52e7e7ba346b7ccbcb2b1c30ec841c9da181b29de4a0c74beae45a3314304c0ad57b0e1d7493aba59ec81f1a641  10-isal_crypto.patch
@@ -740,4 +743,7 @@ ad71fda050df8658d653f9131855c28ff889395dfcc70a3124575c8b063c8e84eca7eb390232b6ee
 afef1cc7e43f500d95d2ffd1687cfcb756e9d8dec729186a25d513d4401b38f00edac922562a161575b1da1a65ded3e99d01cf34f9bc329f6d08cf2b896acd0c  gcc13.patch
 81c22e9229f70780b4c61b511f917f7384734f1221d0ad2412182e6430f2f6256d619ca315ae2efd5ff183746e2d5b960055c46367df081c747a462131f00b41  gcc14-2.patch
 bf088eeeac8554a66012f076745714326ab31632021ca2eeffa3b525bfa7fa5263096f2b0e0157e16c50c77ecf8b7771ee388e9472852e6860b160e1417e7ee1  py3-importlib-metadata-5.0.0.patch
+bdb5e3bc3e2449b92570ddd2874982f4286ab3406a149d222d4ad4d6362ae3d20c519999b83efea4febab1cf01522b0bee9c0334cd059394e54004def14658e9  ceph-19.2.2-py313-1.patch
+e393c7754c9977a3aeba85db29d4b9ed66a1687cc7d164849af50030a2c55ee5980a2619deb0e80395cde9679982fc42cf77e28e6c4242a6e4819ded6dee5e07  ceph-19.2.2-py313-2.patch
+780f327b6d86511eb8128b4742a082d79ab617fbb11203090e01bd0b35ba887d9f33ef515f35d4d2fbee36d28a63548591b4a5ea8dd42aee0a93cb6b849e32e4  ceph-19.2.2-py313-3.patch
 "
