community/dsnet: move from testing

--- a/community/dsnet/APKBUILD
+++ b/community/dsnet/APKBUILD
@@ -5,7 +5,7 @@ pkgname=dsnet
 pkgver=0.8.0
 _rev=75a762f6b3650b6efd66a83b544ea20f96dd2c47 # used for version command
 pkgrel=0
-pkgdesc="fast command to manage a centralised wireguard VPN"
+pkgdesc="Fast command to manage a centralised wireguard VPN"
 url="https://github.com/naggie/dsnet"
 arch="all"
 license="MIT"
@@ -23,7 +23,7 @@ build() {
 		-ldflags "
 		-X \"github.com/naggie/dsnet.GIT_COMMIT=$_rev\" \
 		-X \"github.com/naggie/dsnet.VERSION=$pkgver\" \
-		-X \"github.com/naggie/dsnet.BUILD_DATE=$(date)\" \
+		-X \"github.com/naggie/dsnet.BUILD_DATE=$(date -d @"$SOURCE_DATE_EPOCH")\" \
 		" \
 		-o dsnet \
 		./cmd/root.go
