main/nginx: upgrade http-naxsi to 1.7 and change upstream

--- a/main/nginx/APKBUILD
+++ b/main/nginx/APKBUILD
@@ -45,10 +45,14 @@ pkgname=nginx
 # NOTE: Upgrade only to even-numbered versions (e.g. 1.14.z, 1.16.z)!
 # Odd-numbered versions are mainline (development) versions.
 pkgver=1.28.0
-pkgrel=0
+pkgrel=1
 # Revision of nginx-tests to use for check().
 _tests_rev=d964853731321ed99827916355dff54d983e57c0
 _njs_ver=0.8.10
+# Dependency of the naxsi module. The project is active, but they hasn't
+# released a new version since 2017, so we rather bundle it instead of
+# packaging (https://github.com/libinjection/libinjection/issues/50).
+_libinjection_rev=b9fcaaf9e50e9492807b23ffcc6af46ee1f203b9
 # if this isn't set higher than testing/openresty that comes first for some reason
 # even though this has a higher version..
 provider_priority=100
@@ -94,15 +98,13 @@ subpackages="$pkgname-debug $pkgname-doc $pkgname-openrc $pkgname-vim::noarch"
 source="https://nginx.org/download/nginx-$pkgver.tar.gz
 	$pkgname-tests-$_tests_rev.tar.gz::https://github.com/nginx/nginx-tests/archive/$_tests_rev.tar.gz
 	$pkgname-njs-$_njs_ver.tar.gz::https://github.com/nginx/njs/archive/$_njs_ver.tar.gz
+	libinjection-$_libinjection_rev.tar.gz::https://github.com/libinjection/libinjection/archive/b9fcaaf9e50e9492807b23ffcc6af46ee1f203b9.tar.gz
 	no-werror.patch
 	traffic-accounting-nginx-module~disable-stream-module.patch
 	traffic-accounting-nginx-module~fix-memory-leak.patch
 	mod_zip~consistent-timestamp.patch
 	nginx_cookie_flag_module~fix-mem-allocations.patch
 	njs~mktemp-busybox-compat.patch
-	naxsi~assert.patch
-	naxsi~ff-header.patch
-	naxsi~compat.patch
 	nginx-dav-ext-module~dav-class-1-2.patch
 	nginx-dav-ext-module~fix-profind-fail-on-broken-symlinks.patch
 	nginx-dav-ext-module~fix-dot-dirs.patch
@@ -239,7 +241,7 @@ _http_lua_provides="$pkgname-lua"  # for backward compatibility
 _add_module "http-lua-upstream" "v0.07" "https://github.com/openresty/lua-upstream-nginx-module" "" "$_has_luajit"
 _http_lua_upstream_depends="$pkgname-mod-http-lua"
 
-_add_module "http-naxsi" "1.3" "https://github.com/nbs-system/naxsi" "naxsi_src"
+_add_module "http-naxsi" "1.7" "https://github.com/wargio/naxsi" "naxsi_src"
 _naxsi_provides="$pkgname-naxsi"  # for backward compatibility
 
 _add_module "http-nchan" "v1.3.7" "https://github.com/slact/nchan"
@@ -280,6 +282,10 @@ _add_module "rtmp" "v1.2.2" "https://github.com/arut/nginx-rtmp-module"
 _rtmp_provides="$pkgname-rtmp"  # for backward compatibility
 
 prepare() {
+	rmdir "$srcdir"/naxsi-$_http_naxsi_ver/naxsi_src/libinjection
+	mv "$srcdir"/libinjection-$_libinjection_rev \
+		"$srcdir"/naxsi-$_http_naxsi_ver/naxsi_src/libinjection
+
 	local file; for file in $source; do
 		file=${file%%::*}
 
@@ -497,7 +503,7 @@ _module() {
 			mv "$pkgdir"/usr/lib/perl5 "$subpkgdir"/usr/lib/
 		;;
 		http_naxsi)
-			install -m644 -D "$srcdir"/naxsi-*/naxsi_config/naxsi_core.rules \
+			install -m644 -D "$srcdir"/naxsi-$_http_naxsi_ver/naxsi_rules/naxsi_core.rules \
 				./etc/nginx/naxsi_core.rules
 		;;
 		stream)
@@ -516,15 +522,13 @@ sha512sums="
 07d1ef078a73009c2aff0a5729a57f58f26512b71377715ef72cecdb249ef2ff69dd44df3d755a1de2a2721ee604e8a6cfac30a4cf8a45f0890b1746b68ee4d5  nginx-1.28.0.tar.gz
 f71782e7a033d30d26d68cf7cef5f8c298cd4eae01352180f60d48c2108208f8456e4a892d2cabd5fe5cb5769a45d6c49aa74da3a0345375fd7905d6206561b1  nginx-tests-d964853731321ed99827916355dff54d983e57c0.tar.gz
 71bcd596383ff501514adcf9baa0fd4d5cd0d3b53b2cdeee7e64b094ba12f6ee0f8fe99849dd8ad71afb6212566253ebdca2b83713d026ddfed3fe7902a5e906  nginx-njs-0.8.10.tar.gz
+5865b264a425141ddac73b372ecec70180dde7b5f610416c6e071d88e13035cec1b3022290989e501cb6f3eb7aa63aef58049da6ced26acb352f478928c3d660  libinjection-b9fcaaf9e50e9492807b23ffcc6af46ee1f203b9.tar.gz
 c89fab6d3d4226e37f2a8d2122d825046fc9a787e464fc75351a19fbda5b47016ddb907e0a61241a007304af921e11a0715895ba7b6d4c1112afe816177ed02a  no-werror.patch
 09ec9f18323197eafa55ff68e8c836ad3dd830e6cd3bd4aeaf34e179ef3f72f734a0117288c1c58813aff59f3f1f0f29ccd772a672e17551e7a4fd0693a89c92  traffic-accounting-nginx-module~disable-stream-module.patch
 5a7e72fc6ade460b725e6b91d5eafeb2792ad9832fbdb84ed868bd9a25d43116e42877df587b5f3885a1e38769f072ed4e8605393aca672d61bc71dd106d392b  traffic-accounting-nginx-module~fix-memory-leak.patch
 941bd8fe8094396e2e959eb0ab66e9ae2d0452c413a013861d311da7e54114fe8cc25de51a209744e7bbe56f1c4b165b4e933a1e3277ee2b25bf5392bcf07176  mod_zip~consistent-timestamp.patch
 ac0f912ae90e0083cc761a622290223edeed0bd32213bbe766d637ac2dfd9835d163e5d16ef28740cbad05d6d92cc418d62df3413c70b4f2c63db02f8ca1c7cc  nginx_cookie_flag_module~fix-mem-allocations.patch
 4db527d663dbe9e8b503c3cbaa4eae34b45990a5359b3bb98ce970c705faefcac98de49439f2557756a2be8e2e06acc67f98942de01674c498832d80c3cb90c3  njs~mktemp-busybox-compat.patch
-eee45b82a594c4dfa5eecf94cf14cd247bd1dd7d627aa0a26666828b3e2da1a358da251a23f0b5feeb5f95f6ba205af6ead54c1e6bcb67f6d11149c0580de3af  naxsi~assert.patch
-7c35f51d73b6c20b6b9b030e76a4898752eae38e0f8e4001286a93633f0b1b11c39fd883116d86a323338027766d15d99c824a9cd9ffe934bea80b7af2a3070c  naxsi~ff-header.patch
-3e000d58e1259a656bb49af23623e6542ec994e3fe699e0005afde9ded5d505e7a174b206390b55ef639e53fd47516a86d88de675df86d550808da1d2732e683  naxsi~compat.patch
 eca43f06baa092b1e32e4593e5fba89fbac37a140eee4de186edff478a41007affae94f73a5a8b049c0fc83afaeb80af81a4532950c220d39dc8c00baa0f2874  nginx-dav-ext-module~dav-class-1-2.patch
 b77829e30e09bc48356e9605738a1a701a1842aee7f75c1b847299515bbd0cf422e3634f20d40fb818b8551eca331128de3cb77d0e21462859fca232f38ef658  nginx-dav-ext-module~fix-profind-fail-on-broken-symlinks.patch
 16d8c5d099e1c3d9f33600dbe59c0f1ebc3126f500126fd1edb3fb758982df603e96d33a01c73a3b34461bab0b8fe1a568a00c15144d38784b9ed991dc5faaa5  nginx-dav-ext-module~fix-dot-dirs.patch
@@ -561,7 +565,7 @@ c208cdf3e245527d7b313f9ef1f5d36ca26e3bdafe67df56492a13b7726587538665e5d9fd50f295
 015a358d987476bb61302fbbe1cb105f5314edc1a8b7ee6310aae697f755c79fcb1834ff561fced054c8cd5624f5387fcc1de729731ccd70662f2eb72bcdc174  nginx-log-zmq-1.0.0.tar.gz
 176d7516bebbdb3a5d3bb3ee627a7d63d59f23a7df8dcaef2195edb875ce438700ae97fb2ad1d17a30519bbbc6d6ee8c742dbc1b37d3e4f4da2187acb9c16aaa  lua-nginx-module-0.10.28.tar.gz
 72887c4490854b099cb26bb3f840073a36b0d812bde4486f04dc1be182ca74f0d1e3fd709e77c240c2dcf37665f74cf04e188ea9efe8e127c6789b27b487d0cd  lua-upstream-nginx-module-0.07.tar.gz
-d7aac69b5eceeb1b0db4741201159ade1e0e7f6f7c3e8c4afa2f8959c6c00c3b5285d5185747c2fb0b1400efda02e96799836315e7e492bb4a059b14acb2142d  naxsi-1.3.tar.gz
+c2f1feb4f646bf0b920d0d72409e81d289e1256bc62bcbe1c2cdd1792efb8262d5abe25c87456be957279946ef1f2c9d1e4d920c24a36ee7c4b17ef82a455c63  naxsi-1.7.tar.gz
 585c6f9107b84354e7f6c587f85cf554dd5c213b1e3baa75e0aee0b28520afb9cffff1812c32e81541a1f25773fc58d1b92ce6bd9d85accc12f37841633eb79b  nchan-1.3.7.tar.gz
 d6ca250db8de93edbd7875afca35e73cecdaf82132d1a7ee933cf94c6b8afa8e629e9e647a9321f2bc1fbb92137ec0d32dcd89b82ac5fae31e342537fb7e0431  redis2-nginx-module-0.15.tar.gz
 1ff4c947538a5bd5f9d6adcd87b37f2702f5cc90e3342bc08359cbe8f290b705a3a2daa3dedfb1df3ce4bc19478c8fcac07081c4a53a804fc2862d50078278dc  set-misc-nginx-module-0.33.tar.gz
