testing/hy: enable all tests

--- a/testing/hy/APKBUILD
+++ b/testing/hy/APKBUILD
@@ -33,10 +33,9 @@ build() {
 check() {
 	python3 -m venv --clear --without-pip --system-site-packages .testenv
 	gpep517 install-wheel --destdir .testenv --prefix '' .dist/*.whl
-	# Ignore tests requiring binaries to be installed
-	.testenv/bin/python3 -m pytest \
-		--ignore tests/test_bin.py \
-		--ignore tests/test_hy2py.py
+	PYTHONPATH="$builddir/build/lib" \
+		PATH="$PATH:$builddir/.testenv/bin" \
+		.testenv/bin/python3 -m pytest
 }
 
 package() {
