main/nginx: build with pcre2 (10.x) instead of pcre (8.x)
The lua module added support for PCRE2, so we can finally switch to it.

--- a/main/nginx/APKBUILD
+++ b/main/nginx/APKBUILD
@@ -71,7 +71,7 @@ makedepends="
 	libxslt-dev
 	linux-headers
 	openssl-dev>3
-	pcre-dev
+	pcre2-dev
 	perl-dev
 	pkgconf
 	zeromq-dev
@@ -324,8 +324,6 @@ _build() {
 	# Enable support for Redis store in the http-keyval module.
 	export NGX_HTTP_KEYVAL_ZONE_REDIS=1
 
-	# --without-pcre2 - Lua module is not compatible with PCRE2 yet
-	#   https://github.com/openresty/lua-nginx-module/issues/1984
 	./configure \
 		--prefix=/var/lib/$pkgname \
 		--sbin-path=/usr/sbin/$pkgname \
@@ -344,8 +342,6 @@ _build() {
 		--group=$_grp_ngx \
 		--with-threads \
 		--with-file-aio \
-		\
-		--without-pcre2 \
 		\
 		--with-http_ssl_module \
 		--with-http_v2_module \
