community/njs: build with pcre2 (10.x) instead of pcre (8.x)
Following change in main/nginx.

--- a/community/njs/APKBUILD
+++ b/community/njs/APKBUILD
@@ -3,18 +3,16 @@
 pkgname=njs
 # Keep it in sync with njs in main/nginx.
 pkgver=0.8.10
-pkgrel=0
+pkgrel=1
 pkgdesc="njs scripting language CLI utility"
 url="https://nginx.org/en/docs/njs/"
 arch="all"
 license="BSD-2-Clause"
-# Note: njs is compatible with pcre2, but better to use the same PCRE library
-# as for njs module in nginx.
 makedepends="
 	libedit-dev
 	libxml2-dev
 	openssl-dev
-	pcre-dev
+	pcre2-dev
 	"
 checkdepends="expect"
 subpackages="$pkgname-debug $pkgname-libs-static"
