--- a/testing/hy/APKBUILD
+++ b/testing/hy/APKBUILD
@@ -8,7 +8,7 @@ url="http://hylang.org/"
 arch="noarch"
 license="MIT"
 depends="python3 py3-funcparserlib py3-rply py3-colorama"
-makedepends="py3-setuptools py3-sphinx py3-sphinxcontrib-hydomain py3-sphinx_rtd_theme py3-wheel py3-gpep517"
+makedepends="py3-setuptools py3-sphinx py3-sphinx_rtd_theme py3-wheel py3-gpep517"
 checkdepends="python3-tests py3-pytest py3-pytest-runner py3-tox"
 options="net"
 subpackages="$pkgname-pyc"
