--- a/community/njs/APKBUILD
+++ b/community/njs/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=njs
 # Keep it in sync with njs in main/nginx.
-pkgver=0.8.10
-pkgrel=1
+pkgver=0.9.0
+pkgrel=0
 pkgdesc="njs scripting language CLI utility"
 url="https://nginx.org/en/docs/njs/"
 arch="all"
@@ -16,8 +16,7 @@ makedepends="
 	"
 checkdepends="expect"
 subpackages="$pkgname-debug $pkgname-libs-static"
-source="$pkgname-$pkgver-1.tar.gz::https://github.com/nginx/njs/archive/$pkgver.tar.gz
-	mktemp-busybox-compat.patch
+source="$pkgname-$pkgver.tar.gz::https://github.com/nginx/njs/archive/$pkgver.tar.gz
 	no-werror.patch
 	"
 
@@ -63,7 +62,6 @@ debug() {
 }
 
 sha512sums="
-71bcd596383ff501514adcf9baa0fd4d5cd0d3b53b2cdeee7e64b094ba12f6ee0f8fe99849dd8ad71afb6212566253ebdca2b83713d026ddfed3fe7902a5e906  njs-0.8.10-1.tar.gz
-4db527d663dbe9e8b503c3cbaa4eae34b45990a5359b3bb98ce970c705faefcac98de49439f2557756a2be8e2e06acc67f98942de01674c498832d80c3cb90c3  mktemp-busybox-compat.patch
+a8c893593606ee5f16df65e0d7214b3487e39dbc85e0d2dd907dd086b8bf9f06b0b902000d31bdaa1836ae6aaae001d2624b4499daf887b775be5e79a32956aa  njs-0.9.0.tar.gz
 b8ed822bf0d2ac99682cdecde5ce0136ac46cc9e6077be1369c631ac4caf22f22750f39fced061233f44e3e290e8ca6135da5d121bd53551cbd460419bc90662  no-werror.patch
 "
