--- a/main/dovecot/APKBUILD
+++ b/main/dovecot/APKBUILD
@@ -6,13 +6,14 @@
 # Contributor: Niklas Meyer <derlinkman@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=dovecot
-pkgver=2.4.0
+pkgver=2.4.1
+_pkgver=$pkgver-4
 # rebuild community/dovecot-fts-xapian on version changes
 case "$pkgver" in
 	*.*.*.*) _pkgverminor=${pkgver%.*.*};;
 	*.*.*) _pkgverminor=${pkgver%.*};;
 esac
-pkgrel=2
+pkgrel=0
 _pigeonholever=2.4.0
 pkgdesc="IMAP and POP3 server"
 url="https://www.dovecot.org/"
@@ -66,15 +67,15 @@ subpackages="
 	$pkgname-fts-solr:_fts_solr \
 	$pkgname-fts-flatcurve:_fts_flatcurve
 	"
-source="https://www.dovecot.org/releases/$_pkgverminor/dovecot-$pkgver.tar.gz
+source="https://www.dovecot.org/releases/$_pkgverminor/dovecot-$_pkgver.tar.gz
 	$pkgname-pigeonhole-$_pigeonholever.tar.gz::https://pigeonhole.dovecot.org/releases/$_pkgverminor/dovecot-pigeonhole-$_pigeonholever.tar.gz
 	skip-iconv-check.patch
 	headers.patch
-	setting-types.patch
 	setting-types-pigeonhole
 	dovecot.logrotate
 	dovecot.initd
 	"
+builddir="$srcdir/$pkgname-$_pkgver"
 _builddir_pigeonhole="$srcdir/$pkgname-pigeonhole-$_pigeonholever"
 options="!check" # tests being weird
 
@@ -366,11 +367,10 @@ _submv() {
 }
 
 sha512sums="
-25455f368d850c024c92fdcc814f89d2c5f5583ec84ecaf048b15f13b6f90729ca256bb1b6b2cec46eab129fc78f4600716a72a5f56877479df5d18313b0c526  dovecot-2.4.0.tar.gz
+4915e9282898a4bce4dc3c9781f9aa849e8a2d5bb89dffc2222b417560eaa0135d66342ef342098a86dd5e9b4e76d41145381b7264144411cf45a6f88ca36698  dovecot-2.4.1-4.tar.gz
 489d6c89f74ca66d0c94a4d701ad64cf94e0feadc7da6026a98735bde9d24d2be24c25ab296aee0287745f3a522a12ae071382dcef5143c1333dc843bcfce3aa  dovecot-pigeonhole-2.4.0.tar.gz
 fe4fbeaedb377d809f105d9dbaf7c1b961aa99f246b77189a73b491dc1ae0aa9c68678dde90420ec53ec877c08f735b42d23edb13117d7268420e001aa30967a  skip-iconv-check.patch
 043620ea5d89d561f8f4ebb725368eba5133f1a4e2ff6d682a4abef9d15e04d638a56f4322d34645b1a7e6db0fdd7bf73692771012de903401b9ea25353c354c  headers.patch
-788234404ebeea514b0598885b88d7b8e4a4ec9c358495e76a937a3d0f02d7b30c47cc345ba33cc952fb8d0f06e6b3f2147e6931564eb240835cacd1d3c40532  setting-types.patch
 f099b25c5a48ba21bf26046864480d4c021ac46d1c61c146033de6093a5d86dab06902ccf638ac7895bbd1df720d483ed5be23889d7c4ea5309969b1c39f1f42  setting-types-pigeonhole
 9f19698ab45969f1f94dc4bddf6de59317daee93c9421c81f2dbf8a7efe6acf89689f1d30f60f536737bb9526c315215d2bce694db27e7b8d7896036a59c31f0  dovecot.logrotate
 d91951b81150d7a3ef6a674c0dc7b012f538164dac4b9d27a6801d31da6813b764995a438f69b6a680463e1b60a3b4f2959654f68e565fe116ea60312d5e5e70  dovecot.initd
