community/vhs: move depends="chromium" into package()
was added in cf80e28fefb5665baeb053ae0c7d33373f421066
and no other package has "vhs" in depends/makedepends

allows building vhs without needing to install chromium

this should be the last blocker in community for the Go 1.24.3 rebuild

--- a/community/vhs/APKBUILD
+++ b/community/vhs/APKBUILD
@@ -8,7 +8,7 @@ pkgdesc="Tool for automatic recording of terminal sessions"
 url="https://github.com/charmbracelet/vhs"
 arch="x86_64 armv7 aarch64" # chromium
 license="MIT"
-depends="ffmpeg ttyd chromium"
+depends="ffmpeg ttyd"
 makedepends="go"
 subpackages="
 	$pkgname-doc
@@ -43,6 +43,8 @@ check() {
 }
 
 package() {
+	depends="$depends chromium"
+
 	install -Dm755 builddir/vhs -t "$pkgdir"/usr/bin/
 	install -Dm644 builddir/vhs.1 -t "$pkgdir"/usr/share/man/man1/
 
